# anki-maker

./: .bandit  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  API.md  CLAUDE.md  CONFIGURATION.md  DOCUMENTATION_REVIEW_SUMMARY.md  DOCUMENTATION_UPDATES.md  Dockerfile  EXAMPLES.md  Makefile  README.md  TROUBLESHOOTING.md  ci_comparison_results.json  ci_makefile_alignment_report.md  compare_local_ci_results.py  debug_cli_test.py  debug_startup.py  debug_startup2.py  debug_test.py  docker-compose.yml  final_validation_report.json  main.py  mkdocs.yml  mypy.ini  pyproject.toml  samples.csv  test_makefile_ci_compatibility.py  test_microeconomics.txt  test_microeconomics_flashcards.csv  test_output.csv  validate_ci_workflow.py
.github/workflows/: ci.yml  docs.yml
.github/workflows/configs/: docker-config.yml  python-setup.yml  test-matrix.yml
.kiro/hooks/: docs-sync-hook.kiro.hook
.kiro/specs/document-to-anki-cli/: design.md  requirements.md  tasks.md
.kiro/specs/document-to-anki-unified/: design.md  requirements.md  tasks.md
.kiro/specs/multi-language-configuration/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  quality.md  structure.md  tech.md
configs/: README.md  file-formats.yml  languages.yml  models.yml
configs/docker/: development.yml  production.yml
docs/: API.md  CONFIGURATION.md  DOCUMENTATION_REORGANIZATION.md  DOCUMENTATION_UPDATES.md  EXAMPLES.md  MAKEFILE_CI_ENHANCEMENTS.md  MIGRATION.md  README.md  SCRIPTS_MAKEFILE_ALIGNMENT.md  SECURITY.md  SECURITY_SUMMARY.md  TROUBLESHOOTING.md  index.md
examples/: Microeconomics_flashcards.csv  api_examples.md  usage_examples.md
examples/sample_documents/: sample.md  sample.txt
performance_tests/: README.md  __init__.py  test_language_performance.poy
scripts/: compare_local_ci_results.py  quality_check.sh  security_validation.py  setup_dev.sh  test_makefile_ci_compatibility.py  validate_config.py
src/document_to_anki/: __init__.py  config.py
src/document_to_anki/cli/: __init__.py  main.py
src/document_to_anki/core/: __init__.py  document_processor.py  flashcard_generator.py  llm_client.py  prompt_templates.py
src/document_to_anki/models/: __init__.py  flashcard.py
src/document_to_anki/utils/: __init__.py  config_loader.py  docx_extractor.py  file_handler.py  pdf_extractor.py  pptx_extractor.py  text_extractor.py  text_extractor_common.py
src/document_to_anki/web/: README.md  __init__.py  app.py  dependencies.py  routes_export.py  routes_flashcards.py  routes_upload.py  schemas.py  session_manager.py
src/document_to_anki/web/static/: app.js  manifest.json  style.css  sw.js
src/document_to_anki/web/templates/: error.html  index.html
tests/: README.md  __init__.py  conftest.py  test_cli_integration.poy  test_cli_integration.py  test_cli_language_help.py  test_comprehensive_language_validation.py  test_document_processor.py  test_end_to_end.py  test_end_to_end_language_generation.poy  test_end_to_end_language_generation.py  test_environment_variable_integration.py  test_file_handler.py  test_flashcard_generator.py  test_integration_check.py  test_language_config.py  test_language_performance.py  test_llm_client.py  test_llm_client_language.py  test_model_config.py  test_prompt_integration.py  test_prompt_templates.py  test_router_flashcards.py  test_session_manager.py  test_settings_language.py  test_startup_validation.py  test_text_extractor.py  test_web_integration.py  test_web_language_integration.py
tests/fixtures/: README.md  language_test_data.yaml  mock_llm_responses.yml  test_config.yml  test_data_loader.py
tests/fixtures/expected_outputs/: expected_flashcards.json
tests/fixtures/sample_documents/: large_document.txt  machine_learning.md  mixed_content.txt  performance_test.txt  python_basics.txt  sample.md  sample.txt
