[project]
name = "anki-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
    "litellm>=1.73.6",
    "ollama>=0.3.0",
    "pytest>=8.4.1",
    "streamlit>=1.46.1",
    "loguru>=0.7.2",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "python-dotenv>=1.1.1",
    "pytest-mock>=3.14.1",
    "imapclient>=3.0.1",
    "click>=8.2.1",
    "fastapi>=0.115.14",
    "watchdog>=6.0.0",
    "psutil>=7.0.0",
    "rich>=14.1.0",
    "uvicorn>=0.35.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "numpy>=1.24.0",
    "docx>=0.2.4",
]

[project.scripts]
document-to-anki = "document_to_anki.cli.main:main"
document-to-anki-web = "document_to_anki.web.app:run_server"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "pytest-html",
    "pytest-xdist",
    "pytest-benchmark",
    "pytest-postgresql",
    "psycopg[binary]",
    "ruff",
    "yamllint",
    "pydantic",
    "faker",
    "factory-boy",
    "pytest-factoryboy",
    "responses",
    "freezegun",
    "memory-profiler",
    "psutil",
    "bandit",
    "safety",
    "pendulum",
    "yamlfix",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 110
indent-width = 4

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.lint]
# Enable a broader set of rules for more comprehensive checks.
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "UP", # pyupgrade
]
ignore = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
